--- a/css/styles.css
+++ b/css/styles.css
@@ -75,6 +75,9 @@ h1, h2, h3, h4, h5, h6, p {
     align-items: center;
     column-gap: 40px;
 } 
+.navigation-list-item {
+    position: relative;
+}
 
 .navigation-link,
 .navigation-link:visited {
@@ -85,12 +88,28 @@ h1, h2, h3, h4, h5, h6, p {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.navigation-link.current {
+    color: #4d5ae5;
+}
+.navigation-link.current::after {
+    content: "";
+    background-color: #4d5ae5;
+    position: absolute;
+    bottom: -1px;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
 }
 
 .navigation-link:hover,
-.navigation-link:focus {
+.navigation-link:focus{
     color: #404bbf;
 }
+
 
 .main-contacts {
 margin-left: auto;
@@ -109,6 +128,7 @@ margin-left: auto;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contacts-link:hover,
@@ -122,8 +142,18 @@ margin-left: auto;
 
 .hero-section {
     background: #2e2f42;
+    background-image: linear-gradient(
+        to bottom,
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)), 
+    url(../images/bckgrd_img/people-office.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
     padding: 188px 0;
-}
+    width: 1440px;
+    margin: 0 auto;
+    }
 
 .hero-title {
     font-weight: 700;
@@ -140,6 +170,7 @@ margin-left: auto;
 .hero-button {
     display: block;
     background-color: #4d5ae5;
+
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
@@ -150,6 +181,7 @@ margin-left: auto;
     border: none;
     padding: 16px 32px;
     margin: 0 auto 0 auto;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-button:hover,
@@ -189,6 +221,18 @@ margin-left: auto;
 .about-list-item {
     max-width: 264px;
 }
+
+.about-list-icon {
+    display: flex;
+    height: 112px;
+    border: 1px solid #8e8f99;
+    border-radius: 4px;
+    background-color: #f4f4fd;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 8px;
+}
+
 .about-title {
     font-weight: 500;
     font-size: 20px;
@@ -232,8 +276,6 @@ margin-left: auto;
     border-radius: 0 0 4px 4px;
     padding: 0px 0px 32px;
     max-width: 264px;
-
-    ;
 }
 
 .team-description {
@@ -257,6 +299,36 @@ margin-left: auto;
     color: #434455;
 }
 
+.team-social-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 8px;
+}
+
+.social-link-list {
+    display: flex;
+    gap: 24px;
+
+}
+
+.team-social-link,
+.team-social-link:visited {
+    display: flex;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    align-items: center;
+    justify-content: center;
+    background-color: #4d5ae5;
+    fill: #f4f4fd;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.team-social-link:hover,
+.team-social-link:focus {
+    background-color: #31d0aa;
+}
 /* #endregion team styles  */
 
 /* #region portfolio styles */
