--- a/css/styles.css
+++ b/css/styles.css
@@ -216,7 +216,7 @@ margin-left: auto;
 .about-list {
     display: flex;
     align-items: flex-start;
-    gap: 24px;
+    column-gap: 24px;
 }
 .about-list-item {
     max-width: 264px;
@@ -255,11 +255,6 @@ margin-left: auto;
     background: #f4f4fd;
 }
 
-.team-container {
-    display: flex;
-    align-items: center;
-    column-gap: 24px;
-}
 
 .team-title {
     font-weight: 700;
@@ -269,6 +264,12 @@ margin-left: auto;
     text-align: center;
     color: #2e2f42;
     margin-bottom: 72px;
+}
+
+.team-container {
+    display: flex;
+    align-items: center;
+    column-gap: 24px;
 }
 
 .team-list {
@@ -307,12 +308,13 @@ margin-left: auto;
 
 .social-link-list {
     display: flex;
-    gap: 24px;
-
+    justify-content: center;
+    column-gap: 16px;
+    align-items: center;
 }
 
-.team-social-link,
-.team-social-link:visited {
+.social-link,
+.social-link:visited {
     display: flex;
     width: 40px;
     height: 40px;
@@ -320,15 +322,15 @@ margin-left: auto;
     align-items: center;
     justify-content: center;
     background-color: #4d5ae5;
-    fill: #f4f4fd;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+    fill: #f4f4fd;
 }
 
-.team-social-link:hover,
-.team-social-link:focus {
-    background-color: #31d0aa;
+.social-link:hover,
+.social-link:focus {
+    background-color: #404bbf;
 }
+
 /* #endregion team styles  */
 
 /* #region portfolio styles */
@@ -344,37 +346,67 @@ margin-left: auto;
 .portfolio-container {
     display: flex;
     flex-wrap: wrap;
-    gap: 48px 24px;
-    
+    gap: 48px 24px;    
 }
 
 .portfolio-list {
-    max-width: 360px;
+    cursor: pointer;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);    
+
 }
+
+.portfolio-list:hover,
+.portfolio-list:focus {
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+}
+
+.portfolio-list:hover .portfolio-overlay-item,
+.portfolio-list:focus .portfolio-overlay-item {
+    transform: translateY(0);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+.portfolio-list-overlay {
+    position: relative;
+    overflow: hidden;
+}
+
+.portfolio-overlay-item {
+    background-color: #4d5ae5;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform: translateY(100%);
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+}
+
+.portfolio-border {
+    border-bottom: 1px solid #e7e9fc;
+    border-left: 1px solid #e7e9fc;
+    border-right: 1px solid #e7e9fc;
+    padding: 32px 16px;    
+}
+
 .portfolio-product {
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
     margin-bottom: 8px; 
-    
 }
 
 .portfolio-projects {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: #434455;
-    
+    color: #434455;    
 }
-
-.portfolio-border {
-    border-bottom: 1px solid #e7e9fc;
-        border-left: 1px solid #e7e9fc;
-        border-right: 1px solid #e7e9fc;
-        padding: 32px 16px;
-}
-
 /* #endregion portfolio styles */
 
 /* #region footer styles */
@@ -383,13 +415,17 @@ margin-left: auto;
     padding: 100px 0;
 }
 
-.footer-container {
+.footer-block-container {
+    display: flex;
+
+}
+
+.footer-description {
     display: flex;
     flex-direction: column;
-
-   
-    
+    margin-right: 120px;
 }
+
 .footer-logo {
     display: inline-block;
     font-family: 'Raleway', sans-serif;
@@ -409,5 +445,4 @@ margin-left: auto;
     color: #f4f4fd;
     max-width: 264px;
 }
-
 /* #endregion footer styles */
