--- a/css/styles.css
+++ b/css/styles.css
@@ -330,12 +330,15 @@ margin-left: auto;
     justify-content: center;
     background-color: #4d5ae5;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    fill: #f4f4fd;
 }
-
+ 
 .social-link:hover,
 .social-link:focus {
     background-color: #404bbf;
+}
+
+.team-social-icon {
+    fill: #f4f4fd;
 }
 
 /* #endregion team styles  */
@@ -480,11 +483,14 @@ margin-left: auto;
     justify-content: center;
     background-color: #4d5ae5;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    fill: #f4f4fd;
 }
 
     .footer-social-link:hover,
     .footer-social-link:focus {
         background-color: #31d0aa;
+    }
+
+    .footer-social-icon {
+        fill: #f4f4fd;
     }
 /* #endregion footer styles */
