--- a/css/styles.css
+++ b/css/styles.css
@@ -394,7 +394,7 @@ margin-left: auto;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #f4f4fd;
-    padding: 40px 32px 164px 32px;
+    padding: 40px 32px;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
